Домашка по SpringWeb.Корректировка.